fix small layout issue on home page

--- a/themes/lazy/static/css/lazy.css
+++ b/themes/lazy/static/css/lazy.css
@@ -476,8 +476,7 @@ main,
 .post-teaser {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4rem;
-  text-align: center;
+  margin-bottom: 2rem;
   width: 100%;
   max-width: 400px;
 }
@@ -523,6 +522,7 @@ main,
 .post-teaser__content .publish-time {
   font-size: 0.8em;
   color: var(--independence);
+  margin-bottom: 1.5rem;
 }
 
 .post-teaser .post-link {
